# rusty-man

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  rusty-man.jpg.license
.builds/: archlinux-msrv.yml  archlinux.yml
.reuse/: dep5
src/: args.rs  doc.rs  index.rs  main.rs  parser.rs  source.rs  test_utils.rs
src/index/: v1_44.rs  v1_52.rs  v1_69.rs
src/parser/: mod.rs  util.rs
src/parser/html/: mod.rs
src/viewer/: mod.rs  rich.rs  text.rs  utils.rs
src/viewer/text/: mod.rs  plain.rs  rich.rs
src/viewer/tui/: mod.rs  views.rs
tests/: output.rs  update-docs.sh  update-snapshots.sh
tests/html/1.40.0/: search-index.js
tests/html/1.40.0/anyhow/: index.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
tests/html/1.40.0/kuchiki/: all.html  enum.NodeData.html  fn.parse_html.html  fn.parse_html_with_options.html  index.html  struct.Attribute.html  struct.Attributes.html  struct.Doctype.html  struct.DocumentData.html  struct.ElementData.html  struct.ExpandedName.html  struct.Node.html  struct.NodeDataRef.html  struct.NodeRef.html  struct.ParseOpts.html  struct.Selector.html  struct.Selectors.html  struct.Specificity.html
tests/html/1.40.0/log/: enum.Level.html  enum.LevelFilter.html  fn.logger.html  fn.max_level.html  fn.set_boxed_logger.html  fn.set_logger.html  fn.set_logger_racy.html  fn.set_max_level.html  index.html  macro.debug.html  macro.error.html  macro.info.html  (+11 more)
tests/html/1.41.1/: search-index.js
tests/html/1.42.0/: search-index.js
tests/html/1.43.1/: search-index.js
tests/html/1.44.1/: search-index.js
tests/html/1.45.2/: search-index.js
tests/html/1.46.0/: search-index.js
tests/html/1.47.0/: search-index.js
tests/html/1.48.0/: search-index.js
tests/html/1.49.0/: search-index.js
tests/html/1.50.0/: search-index.js
tests/html/1.51.0/: search-index.js
tests/html/1.52.0/: search-index.js
tests/html/1.53.0/: search-index.js
tests/html/1.54.0/: search-index.js
tests/html/1.55.0/: search-index.js
tests/html/1.56.0/: search-index.js
tests/snapshots/: output__1.40.0_constant_log_static_max_level.snap  output__1.40.0_html_mod_log.snap  output__1.40.0_html_mod_rand_core.snap  output__1.40.0_macro_anyhow_anyhow.snap  output__1.40.0_macro_log_debug.snap  output__1.40.0_struct_log_metadata.snap  output__1.40.0_trait_log_log.snap  output__1.41.1_html_fn_log_logger.snap  output__1.41.1_html_struct_rand_core_block_blockrng.snap  output__1.42.0_mod_anyhow.snap  output__1.42.0_struct_anyhow_error.snap  output__1.43.1_html_enum_log_level.snap  output__1.44.1_struct_log_metadata.snap  output__1.45.2_examples_struct_rand_core_rngcore.snap  output__1.45.2_html_examples_mod_anyhow.snap  output__1.45.2_html_fn_log_set_logger_racy.snap  output__1.45.2_html_struct_anyhow_error.snap  output__1.45.2_macro_anyhow_ensure.snap  output__1.46.0_html_trait_anyhow_context.snap  output__1.46.0_html_trait_rand_core_seedablerng.snap  output__1.46.0_struct_anyhow_error.snap  output__1.47.0_html_constant_log_static_max_level.snap  output__1.47.0_html_struct_anyhow_error.snap  output__1.47.0_html_trait_rand_core_rngcore.snap  output__1.47.0_mod_log.snap  output__1.47.0_type_anyhow_result.snap  output__1.48.0_html_trait_log_log.snap  output__1.48.0_html_trait_rand_core_rngcore.snap  output__1.48.0_macro_log_debug.snap  output__1.48.0_type_anyhow_result.snap  output__1.49.0_mod_anyhow.snap  output__1.50.0_struct_log_metadata.snap  output__1.50.0_struct_rand_core_block_blockrng.snap  output__1.51.0_html_mod_log.snap  output__1.51.0_mod_rand_core.snap  output__1.52.0_html_examples_mod_log.snap  output__1.52.0_html_mod_log.snap  output__1.52.0_html_struct_rand_core_block_blockrng.snap  output__1.52.0_mod_anyhow.snap  output__1.52.1_html_enum_log_level.snap  (+39 more)
(+660 files in other folders)
