# SPDX-FileCopyrightText: 2020 Robin Krahl <robin.krahl@ireas.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "rusty-man"
version = "0.1.1"
authors = ["Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"
description = "Command-line viewer for rustdoc documentation"
homepage = "https://sr.ht/~ireas/rusty-man"
repository = "https://git.sr.ht/~ireas/rusty-man"
keywords = ["doc", "cli", "rustdoc"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
license = "MIT"
exclude = [".builds/*"]

[dependencies]
anyhow = "1.0.31"
crossterm = "0.17.7"
html2text = "0.1.12"
kuchiki = "0.8.0"
log = "0.4.11"
markup5ever = "0.10.0"
pager = "0.15.0"
serde_json = "1.0.56"
serde_repr = "0.1.6"
serde_tuple = "0.5.0"

[dependencies.env_logger]
version = "0.7.1"
default-features = false

[dependencies.serde]
version = "1.0.114"
features = ["derive"]

[dependencies.structopt]
version = "0.3.15"
default-features = false
